[package]
name        = "attestation"
version     = { workspace = true }
description = "ICS07 Attestation light client for IBC on Solana"
edition     = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
readme      = "../../../README.md"
keywords    = ["cosmos", "ibc", "solana", "attestation", "anchor"]
categories  = ["cryptography", "blockchain"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name       = "attestation"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang              = { workspace = true, features = ["init-if-needed"] }
access-manager           = { workspace = true, features = ["cpi"] }
borsh                    = { workspace = true }
ics25-handler            = { workspace = true }
solana-ibc-types         = { workspace = true }
solana-keccak-hasher     = { workspace = true }
solana-secp256k1-recover = { workspace = true }
alloy-sol-types          = { workspace = true }
solana-sha256-hasher     = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }

[dev-dependencies]
mollusk-svm         = { workspace = true }
mollusk-svm-bencher = { workspace = true }
solana-sdk          = { workspace = true, features = ["full"] }
solana-program-test = { workspace = true }
tokio               = { version = "1", features = ["full"] }
hex                 = { workspace = true }
bincode             = { workspace = true }
alloy-primitives    = { workspace = true }
alloy-signer        = { workspace = true }
alloy-signer-local  = { workspace = true }
rstest              = { workspace = true }
sha2                = { workspace = true }
